# mobile_manipulator_control

./: README.md
mobile_manipulator_assets/diablo_swingarm/: CMakeLists.txt  package.xml
mobile_manipulator_assets/swing_arm/: CMakeLists.txt  package.xml
mobile_manipulator_controller/: CMakeLists.txt  package.xml  upright_controller_plugins.xml
mobile_manipulator_controller/include/mobile_manipulator_controller/: MobileManipulatorVisualization.h  UprightController.h
mobile_manipulator_controller/src/: MobileManipulatorVisualization.cpp  UprightController.cpp
mobile_manipulator_controller/src/interpolation/: CubicSpline.cpp  MultiJointTrajectory.cpp
mobile_manipulator_controller/src/synchronized_module/: RosReferenceManager.cpp
mobile_manipulator_controller/src/verify/: DummyManipulatorNode.cpp  MobileManipulatorMpcNode.cpp
mobile_manipulator_gazebo/: CMakeLists.txt  mobile_manipulator_hw_sim_plugins.xml  package.xml
mobile_manipulator_gazebo/src/: MobileManipulatorHWSim.cpp
mobile_manipulator_gazebo/worlds/: pole_world.world
mobile_manipulator_interface/: CMakeLists.txt  package.xml
mobile_manipulator_interface/include/mobile_manipulator_interface/: InertialAlignment.h  MobileManipulatorInterface.h
mobile_manipulator_interface/include/mobile_manipulator_interface/common/: AccessHelpFunctions.h  FactoryFunctions.h  InterfaceSettings.h  PrasingBlancingConfig.h  ReferenceTrajectory.h
mobile_manipulator_interface/include/mobile_manipulator_interface/common/implementation/: AccessHelperFunctionsImpl.h  FactoryFunctionsImpl.h
mobile_manipulator_interface/include/mobile_manipulator_interface/constraint/: BoundedBalancingConstraints.h  ConstraintType.h  EndEffectorBoxConstraint.h  JointStateInputLimits.h  ObstacleConstraint.h  ProjectilePathConstraint.h  ProjectilePlaneConstraint.h  StateToStateInputConstraint.h
mobile_manipulator_interface/include/mobile_manipulator_interface/cost/: EndEffectorCost.h  QuadraticJointStateInputCost.h
mobile_manipulator_interface/include/mobile_manipulator_interface/dynamics/: BaseType.h  Dimensions.h  MobileManipulatorInfo.h  SystemDynamics.h  SystemPinocchioMapping.h
mobile_manipulator_interface/src/: InertialAlignment.cpp  MobileManipulatorInterface.cpp
mobile_manipulator_interface/src/constraint/: BoundedBalancingConstraints.cpp  EndEffectorConstraint.cpp
(+58 files in other folders)
