<?xml version="1.0"?>
<package format="2">
    <name>mobile_manipulator_controller</name>
    <version>0.0.0</version>
    <description>The mobile_manipulator_controller package</description>
    <maintainer email="lsy@todo.todo">yuchen</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_clang_tools</build_depend>

    <depend>roslib</depend>
    <depend>robot_state_publisher</depend>
    <depend>visualization_msgs</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>controller_interface</depend>
    <depend>position_controllers</depend>
    <depend>angles</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>effort_controllers</depend>
    <depend>pluginlib</depend>
    <depend>robot_common</depend>
    <depend>realtime_tools</depend>
    <depend>robot_hw</depend>

    <depend>mobile_manipulator_interface</depend>
    <depend>arm_pinocchio_interface</depend>

    <export>
        <controller_interface plugin="${prefix}/upright_controller_plugins.xml"/>
    </export>
</package>