<?xml version="1.0"?>
<package format="2">
    <name>mobile_manipulator_interface</name>
    <version>0.0.0</version>
    <description>The mobile_manipulator_interface package</description>

    <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_clang_tools</build_depend>

    <depend>tf</depend>
    <depend>urdf</depend>
    <depend>kdl_parser</depend>
    <depend>yaml_cpp</depend>
    <depend>robot_state_publisher</depend>
    <depend>visualization_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>ocs2_core</depend>
    <depend>ocs2_ddp</depend>
    <depend>ocs2_mpc</depend>
    <depend>ocs2_oc</depend>
    <depend>ocs2_sqp</depend>
    <depend>ocs2_robotic_tools</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>ocs2_pinocchio_interface</depend>
    <depend>ocs2_self_collision</depend>
    <depend>ocs2_self_collision_visualization</depend>
    <depend>pinocchio</depend>
    <depend>roscpp</depend>

    <depend>upright_core</depend>
</package>
